--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap" rel="stylesheet">
-    <title>DFINITY- Sass and Bootstrap</title>
+    <title>DFINITY</title>
 </head>
 <body>
     <header class="showcase">
         <nav>
-            <h4 class="logo">DFINITY</h4>
-            <ul>
-                <li><a href="#">Explore</a></li>
-                <li><a href="#">Learn</a></li>
-                <li><a href="#">Ecosystem</a></li>
-                <li><a href="#">Foundation</a></li>
-                <li><a href="#">Developer Center &rarr;</a></li>
+            <h5 class="logo">DFINITY</h5>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">Explore</a></li>
+                <li class="list-inline-item"><a href="#">Learn</a></li>
+                <li class="list-inline-item"><a href="#">Ecosystem</a></li>
+                <li class="list-inline-item"><a href="#">Foundation</a></li>
+                <li class="list-inline-item"><a href="#" class="hovered">Developer Center &rarr;</a></li>
             </ul>
         </nav>
         <div class="container">
-            <div class="showcase-content">
+            <div class="showcase-content text-center">
                 <div class="title">
                     <h1>Blockchain</h1>
                     <h1 class="space">singularity</h1>
@@ -34,13 +35,14 @@
                     <a href="#">&rarr; Roadmap</a>
                     <a href="#" class="full">&rarr; Start coding</a>
                 </div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
         </div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
     </header>
 
-    <section class="section1">
-        
+    <section class="container text-center">
+        <h2>Lorem ipsum consectetur</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora exercitationem fuga et porro minima? Similique suscipit ipsum officiis voluptates! Aut.</p>
     </section>
     <section class="section2">
 
